fixed collapsed cancel button on mobile

--- a/app/static_src/less/partials/header.less
+++ b/app/static_src/less/partials/header.less
@@ -607,7 +607,6 @@
 }
 
 .topicSearchList-header-cancel-main {
-    width: 15%;
     display: table-cell;
     justify-content: center;
     align-items: center;
